# FedeChess

./:  .env  .gitignore  .include.fedechess.tinux.net.rsync  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DIARIO.md  DIARY.md  Diario.md  FedeChess.code-workspace  MILESTONE.md  README.md  TODO.md  TORNEOS.md  ToDo.md  gitbranchs.zsh  httpdocs  rsync-fedechess.tinux.net.zsh  web
.zed/: settings.json  tasks.json
docs/: FederatedMembers.md  Management.md  Monitors.md  Structure.md
docs/Vega/: ELOFADA VEGA FIDEFADA.xls
documentation/: Competitions.md  Referees.md
fedechess/: CHANGELOG  Cargo.toml  README.md  gits.zsh
fedechess/docs/: FederatedMembers.md  Structure.md
fedechess/libs/actas/: Cargo.toml
fedechess/libs/arbitros/: Cargo.toml
fedechess/libs/circulares/: Cargo.toml
fedechess/libs/divisiones/: Cargo.toml
fedechess/libs/documentaciones/: Cargo.toml
fedechess/libs/logins/: Cargo.toml
fedechess/libs/monitores/: Cargo.toml
fedechess/src/: main.rs
libs/clubes/: Cargo.toml
libs/delegaciones/: Cargo.toml
libs/federados/: Cargo.toml
libs/habilitados/: Cargo.toml
libs/inscripciones/: Cargo.toml
libs/jugadores/: Cargo.toml
libs/reglamentos/: Cargo.toml
libs/torneos/: Cargo.toml
libs/transeuntes/: Cargo.toml
sql-schemes/: fedechess-2026-06-24.sql
src/: LICENSE  README.md  config.rs  error.rs  fedechess.sql  main.rs  main.rs.bak  main_cmd.rs
src/db/: pool.rs
src/fide/: importer.rs  mod.rs  parser.rs
src/models/: federado.rs  federate.rs  member.rs  mod.rs
src/repository/: federado_repo.rs  federate_repo.rs  member_repo.rs  mod.rs
src/services/: federado_service.rs  federate_service.rs  member_service.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/screens/: dashboard.rs  mod.rs
