[package]
name = "fedechess"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eframe = "0.20"  # Versión actual de eframe
egui = "0.20"    # Versión actual de egui
mysql = "23.0"   # Versión actual de mysql


actas  		=  { path = "libs/actas" }
arbitros  	=  { path = "libs/arbitros" }
circulares  	=  { path = "libs/circulares" }
clubes  	=  { path = "libs/clubes" }
commons  	=  { path = "libs/commons" }
delegaciones  	=  { path = "libs/delegaciones" }
divisiones  	=  { path = "libs/divisiones" }
documentaciones =  { path = "libs/documentaciones" }
elo  		=  { path = "libs/elo" }
federados  	=  { path = "libs/federados" }
habilitados  	=  { path = "libs/habilitados" }
inscripciones  	=  { path = "libs/inscripciones" }
jugadores  	=  { path = "libs/jugadores" }
logins  	=  { path = "libs/logins" }
monitores  	=  { path = "libs/monitores" }
reglamentos  	=  { path = "libs/reglamentos" }
torneos  	=  { path = "libs/torneos" }
transeuntes  	=  { path = "libs/transeuntes" }
