[package]
name = "fedechess"
version = "0.1.0"
edition = "2024"
[package]
name = "fedechess"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "chrono",
    "macros",
    "migrate"
] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Config & env
dotenvy = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
fake = { version = "3", features = ["derive"] }
rand = "0.8"
